# YuCraft

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  LINUX_PORTING.md  README.md  REWRITE_PLAN.md  xmake.lua
.claude/skills/cpp-header-template/: SKILL.md
.claude/skills/cpp-naming-check/: SKILL.md
.claude/skills/cpp-review/: SKILL.md
.claude/skills/google-cpp-style/: SKILL.md  classes.md  comments.md  features.md  formatting.md  functions.md  headers.md  naming.md  scoping.md
cmake/: CompilerFlags.cmake  FindDependencies.cmake
handheld/project/lib_projects/raknet/jni/RaknetSources/: FileList.cpp
handheld/project/linux/: CMakeLists.txt
handheld/project/wasm/: CMakeLists.txt  CMakePresets.json
handheld/src/: App.h  AppPlatform_linux.cpp  AppPlatform_linux.h  AppPlatform_wasm.cpp  AppPlatform_wasm.h  SharedConstants.h  main.cpp  main_linux.h  main_wasm.h
handheld/src/client/: Minecraft.cpp  Minecraft.h
handheld/src/client/renderer/: Tesselator.cpp  gl.cpp  gl.h  gles.cpp  gles.h
handheld/src/raknet/: PacketLogger.cpp  WindowsIncludes.h
handheld/src/util/: DataIO.cpp  DataIO.h  MemUtils.h
handheld/src/world/entity/: Entity.h  Mob.h
scripts/: setup_deps_linux.py
